# eugene

./: .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  agent-test.ipynb  agent.ipynb  example.py  grid.py  grid_parallel.py  plot_grid.py  plot_grid_old.py  plot_quarantine.py  plot_trajectories.py  quarantine.py  setup.cfg  setup.py  tox.ini
control/: control.py  plot_grid_control.py
docs/: conf.py  index.rst
docs/catastropy/: index.rst
docs/eugene/: gettingstarted.rst  index.rst  installation.rst  riou.rst
eugene/: __init__.py  core.py
eugene/data/: control.txt
eugene/tests/: test_core.py
licenses/: APACHE2.rst  BSD2.rst  GPLv3.rst
