[metadata]
name = catastropy
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = Other
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/catastropy
description = Saving the world.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bmorris3/catastropy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
catastropy = data/*

[tool:pytest]
testpaths = "catastropy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    catastropy/_astropy_init*
    catastropy/conftest.py
    catastropy/*setup_package*
    catastropy/tests/*
    catastropy/*/tests/*
    catastropy/extern/*
    catastropy/version*
    */catastropy/_astropy_init*
    */catastropy/conftest.py
    */catastropy/*setup_package*
    */catastropy/tests/*
    */catastropy/*/tests/*
    */catastropy/extern/*
    */catastropy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
